--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Hello there
-Hi
-Hello again
-https://github.com/Wingslikeagles4031/ruby-challenges
+Hello there<br>
+Hi<br>
+Hello again<br>
+<a href="https://github.com/Wingslikeagles4031/ruby-challenges">my ruby challenges</a>
